# fastapi-template

./: Dockerfile  deployment.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/database/: db.py
app/models/: base.py  item.py
app/routes/: item.py
app/schemas/: item.py
